[package]
name = "ext_based_dip721_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
candid = "0.7.14"
ic-cdk = "0.5.2"
ic-cdk-macros = "0.5.2"
serde = "1"
serde_json = "1"
anyhow = "1"
ic-ledger-types="0.1.1"
hex = {version = "0.4.2", features = ["serde"] }
crc32fast = "1.2.0"